--- a/tmpl/auxiliar/Template.tmpl
+++ b/tmpl/auxiliar/Template.tmpl
@@ -3,119 +3,144 @@
 
 <% skin pci_skin %>
 	<% view template_view uses ViewContent::SessionContent %>
-	
-	
+		
+		
+		<% template header_bar_sign_in() %>
+			<button class="sign-in-button btn" id="sign-in-button">Iniciar sesión</button>
+			<div class="sign-in-form-container" id="sign-in-form-container">
+				<% include sign_in_form() using forms_view %>
+			</div>
+			<script>
+				$('#sign-in-button').click(function() {
+					$(this).toggleClass('active');
+					$('#sign-in-form-container').toggle();
+				});
+			</script>
+		<% end template %>
+		
+		
+		<% template header_bar_sign_out() %>
+			<button class="btn" id="sign-out-button">Salir</button>
+			<script>
+				$('#sign-out-button').click(function() {
+					var on_success = function() {
+						location.reload(true);
+					};
+					
+					var on_error = function(http_error_code, server_error_code) {
+						Toast.showErrorToast(http_error_code, server_error_code, Server.Error.getErrorDescription(server_error_code));
+					};
+					
+					Server.signOut(on_success, on_error);
+				});
+			</script>
+		<% end template %>
+		
+		
+		<% template header_bar_user_information() %>
+			<a href="<% url "/user" using user_name %>">
+				<%= first_name %> <%= last_name %>
+			</a>
+		<% end template %>
+		
+		
+		<% template header_bar_anonymous_mode() %>
+			<a class="toggle-anonymous-mode-button pull-left" id="toggle-anonymous-mode-button"></a>
+			<script>
+				var anonymous_mode_button = $('#toggle-anonymous-mode-button');
+				
+				<% if anonymous_mode %>
+					Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo activado');
+				<% else %>
+					Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo desactivado');
+				<% end %>
+				
+				anonymous_mode_button.click(function() {
+					var on_success = function(anonymous_mode) {
+						anonymous_mode_button.toggleClass('active');
+						if (anonymous_mode)
+							Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo activado');
+						else
+							Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo desactivado');
+					};
+					
+					var on_error = function(http_error_code, server_error_code) {
+						Toast.showErrorToast(http_error_code, server_error_code, Server.Error.getErrorDescription(server_error_code));
+					};
+					
+					Server.toggleAnonymousMode(on_success, on_error);
+				});
+			</script>
+		<% end template %>
+		
+		
+		<% template header_bar_notifications() %>
+			<a id="notifications-button">Notificaciones</a>
+			<div class="hide" id="notifications-container-content">
+				<div class="notifications-main-container">
+					<legend>Notificaciones</legend>
+					<div id="notifications-container"></div>
+				</div>
+			</div>
+			<script>
+				Global.Temp.notification_popover_visible = false;
+				$('#notifications-button').click(function() {
+					$(this).toggleClass('active'); // TODO --- necessary?
+					
+					if (Global.Temp.notification_popover_visible)
+						Popover.hidePopover($(this));
+					else
+						Popover.showPopover($(this), $(this).parent(), 'bottom', $('#notifications-container-content').html());
+					
+					Global.Temp.notification_popover_visible = ! Global.Temp.notification_popover_visible;
+				});
+				
+				Notification.checkNotificationsPeriodically($('#notifications-container'));
+			</script>
+		<% end template %>
+		
+		
+		<% template header_bar_pci_logo() %>
+			<a class="pci-logo pull-left" href="<% url "/" %>"></a>
+		<% end template %>
+		
+		
 		<% template header_bar() %>
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="navbar-inner">
 					<div class="container-fluid">
-						
-						<a class="pull-left" href="<% url "/" %>" id="header-bar-logo"></a>
-						
+						<% include header_bar_pci_logo() %>
 						<% if signed_in %>
 							<ul class="nav pull-left">
 								<li>
-									<a id="notification-button">Notificaciones</a>
-									<div id="notification-container-content">
-										<div id="notification-main-container">
-											<legend>Notificaciones</legend>
-											<div id="notification-container"></div>
-										</div>
-									</div>
-									<script>
-										Global.Temp.notification_popover_visible = false;
-										$('#notification-button').click(function() {
-											$(this).toggleClass('active');
-											
-											if (Global.Temp.notification_popover_visible)
-												Popover.hidePopover($(this));
-											else
-												Popover.showPopover($(this), $(this).parent(), 'bottom', $('#notification-container-content').html());
-											
-											Global.Temp.notification_popover_visible = ! Global.Temp.notification_popover_visible;
-										});
-										
-										Notification.checkNotificationsPeriodically($('#notification-container'));
-									</script>
+									<% include header_bar_notifications() %>
 								</li>
 							</ul>
 						<% end %>
-						
 						<div class="nav-collapse collapse pull-right">
 							<ul class="nav">
 								<li>
-									<form class="navbar-search" action="">
-										<input class="search-query span2" placeholder="Buscar" type="text">
-									</form>
+									<% include search_form() using forms_view %>
 								</li>
 							</ul>
-								<% if signed_in %>
-									<a class="pull-left" id="toggle-anonymous-mode-button"></a>
-									<script>
-									
-										var anonymous_mode_button = $('#toggle-anonymous-mode-button');
-									
-										<% if anonymous_mode %>
-											Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo activado');
-										<% else %>
-											Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo desactivado');
-										<% end %>
-										
-										anonymous_mode_button.click(function() {
-											
-											var on_success = function(anonymous_mode) {
-												anonymous_mode_button.toggleClass('active');
-												if (anonymous_mode)
-													Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo activado');
-												else
-													Tooltip.configureHoverTooltip(anonymous_mode_button, anonymous_mode_button.parent(), 'bottom', 'Modo anónimo desactivado');
-											};
-											
-											var on_error = function(http_error_code, server_error_code) {
-												Toast.showErrorToast(http_error_code, server_error_code, Server.Error.getErrorDescription(server_error_code));
-											};
-											
-											Server.toggleAnonymousMode(on_success, on_error);
-										});
-									</script>
-									
-									<ul class="nav">
-										<li><a href="<% url "/user" using user_name %>"><%= first_name %> <%= last_name %></a></li>
-										<li>
-											<button class="btn" id="sign-out-button">Salir</button>
-											<script>
-												$('#sign-out-button').click(function() {
-													var on_success = function() {
-														location.reload(true);
-													};
-													
-													var on_error = function(http_error_code, server_error_code) {
-														Toast.showErrorToast(http_error_code, server_error_code, Server.Error.getErrorDescription(server_error_code));
-													};
-													
-													Server.signOut(on_success, on_error);
-												});
-											</script>
-										</li>
-									</ul>
-								<% else %>
-									<ul class="nav">
-										<li>
-											<button class="btn" id="sign-in-button">Ingresar</button>
-											<div id="sign-in-form-container">
-												<% include sign_in_form() using forms_view %>
-											</div>
-											<script>
-												$('#sign-in-button').click(function() {
-													$(this).toggleClass('active');
-													$('#sign-in-form-container').toggle();
-												});
-											</script>
-										</li>
-									</ul>
-								<% end %>
+							<% if signed_in %>
+								<% include header_bar_anonymous_mode() %>
+								<ul class="nav">
+									<li>
+										<% include header_bar_user_information() %>
+									</li>
+									<li>
+										<% include header_bar_sign_out() %>
+									</li>
+								</ul>
+							<% else %>
+								<ul class="nav">
+									<li>
+										<% include header_bar_sign_in() %>
+									</li>
+								</ul>
+							<% end %>
 						</div>
-						
 					</div>
 				</div>
 			</div>
@@ -123,62 +148,20 @@
 		
 		
 		<% template navigation_menu() %>
-			<div class="sidebar-nav" id="navigation-menu">
+			<div class="navigation-menu sidebar-nav">
 				<ul class="nav nav-list">
-					<li><a class="navigation-menu-button" id="problems-button" href="<% url "/problems" %>">Problemas</a></li>
-					<li><a class="navigation-menu-button" id="ideas-button" href="<% url "/ideas" %>">Ideas</a></li>
-					<% if signed_in %>
-						<hr />
-						<li><a class="navigation-menu-button" id="profile-button" href="<% url "/user" using user_name %>">Perfil</a></li>
-					<% end %>
+					<li><a class="problems-button navigation-menu-button" id="problems-button" href="<% url "/problems" %>">Problemas</a></li>
+					<li><a class="ideas-button navigation-menu-button" id="ideas-button" href="<% url "/ideas" %>">Ideas</a></li>
 				</ul>
+				<% if signed_in %>
+					<hr />
+					<ul class="nav nav-list">
+						<li><a class="profile-button navigation-menu-button" id="profile-button" href="<% url "/user" using user_name %>">Perfil</a></li>
+					</ul>
+				<% end %>
 			</div>
 		<% end template %>
 		
 		
-		<% template problem_description_box(ProblemPointer problem) %>
-			<div class="problem-description-box-container">
-				<div class="row-fluid">
-					<div class="span2">
-						<div class="problem-votes-container row-fluid">
-							<div class="span6">
-								<div><%= problem->vote_balance %></div>
-								<div>Votos</div>
-							</div>
-							<div class="span6">
-								<div>N/A</div>
-								<div>Soluciones</div>
-							</div>
-						</div>
-					</div>
-					<div class="span9">
-						<div class="row-fluid">
-							<a href="<% url "/publication" using problem->id %>">
-								<%= problem->description %>
-							</a>
-							<span>
-								<% if problem->is_anonymous %>
-									<i>Publicado anónimamente</i>
-								<% else %>
-									<i>Por <a href="<% url "/user" using problem->creator_user_name %>"><%= problem->creator_user_name %></a></i>
-								<% end %>
-								- <%= problem->creation_datetime->toString("%d/%m/%Y a las %H:%M hs.") %>
-							</span>
-						</div>
-					</div>
-					<% if problem->is_solved %>
-						<div class="span1">
-							<div class="problem-solved-tick active"></div>
-						</div>
-					<% end %>
-				</div>				
-			</div>
-		<% end template %>
-		
-		
-		<% template solution_description_box(SolutionPointer problem) %>
-		<% end template %>
-	
-	
 	<% end view %>
 <% end skin %>
