--- a/tmpl/pages/UserPage.tmpl
+++ b/tmpl/pages/UserPage.tmpl
@@ -5,7 +5,15 @@
 	<% view user_page_view uses ViewContent::UserPageContent extends page_template_view %>
 		
 		
+		<% template main_content() %>
+			<div class="main-container narrow header-bar-padding">
+				User content (temporal)
+			</div>
+		<% end template %>
+		
+		
 		<% template page_title() %>
+			<%= user->first_name %> <%= user->last_name %> - PCI
 		<% end template %>
 		
 		
@@ -17,9 +25,7 @@
 		<% template body_content() %>
 			<% include header_bar() using template_view %>
 			<% include navigation_menu() using template_view %>
-			<div class="narrow header-bar-padding" id="main-container">
-				User
-			</div>
+			<% include main_content() %>
 		<% end template %>
 		
 		
