--- a/tmpl/auxiliar/PageTemplate.tmpl
+++ b/tmpl/auxiliar/PageTemplate.tmpl
@@ -13,6 +13,7 @@
 			<link href="/lib/jquery-ui/ui-lightness/jquery-ui-1.10.0.custom.min.css" rel="stylesheet" type="text/css" />
 			<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 			<link href="/lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+			<link href="/css/global.css" rel="stylesheet" type="text/css" />
 			<link href="/css/template.css" rel="stylesheet" type="text/css" />
 			<script src="/lib/jquery/jquery-1.9.0.min.js"></script>
 			<script src="/lib/jquery-ui/jquery-ui-1.10.0.custom.min.js"></script>
