--- a/tmpl/pages/ProblemsPage.tmpl
+++ b/tmpl/pages/ProblemsPage.tmpl
@@ -5,7 +5,122 @@
 	<% view problems_page_view uses ViewContent::ProblemsPageContent extends page_template_view %>
 		
 		
+		<% template problem_description(ProblemPointer problem) %>
+			<div class="row-fluid">
+				<a class="problem-description-link" href="<% url "/publication" using problem->id %>">
+					<%= problem->description %>
+				</a>
+			</div>
+			<div class="row-fluid">
+				<% if problem->is_anonymous %>
+					<i>Publicado anónimamente</i>
+				<% else %>
+					<i>Por <a href="<% url "/user" using problem->creator_user_name %>"><%= problem->creator_user_name %></a></i>
+				<% end %>
+				- <%= problem->creation_datetime->toString("%d/%m/%Y a las %H:%M hs.") %>
+			</div>
+		<% end template %>
+		
+		
+		<% template problem_statistics(ProblemPointer problem) %>
+			<div class="row-fluid">
+				<div class="span6">
+					<div class="problem-description-statistic text-center"><%= problem->vote_balance %></div>
+					<div class="text-center">Votos</div>
+				</div>
+				<div class="span6">
+					<div class="problem-description-statistic text-center">N/A</div>
+					<div class="text-center">Soluciones</div>
+				</div>
+			</div>
+		<% end template %>
+		
+		
+		<% template problem_information(ProblemPointer problem) %>
+			<div class="problem-information-container">
+				<div class="row-fluid">
+					<div class="span2">
+						<% include problem_statistics(problem) %>
+					</div>
+					<div class="span9">
+						<% include problem_description(problem) %>
+					</div>
+					<div class="span1">
+						<% if problem->is_solved %>
+							<div class="tick active"></div>
+						<% end %>
+					</div>
+				</div>
+			</div>
+		<% end template %>
+		
+		
+		<% template problems_information() %>
+			<ul class="nav nav-tabs">
+				<li class="active"><a data-toggle="tab" href="#random-problems-tab">Al azar</a></li>
+				<li><a data-toggle="tab" href="#latest-problems-tab">Recientes</a></li>
+				<li><a data-toggle="tab" href="#unsolved-problems-tab">Sin resolver</a></li>
+			</ul>
+			<div class="tab-content">
+				<div class="tab-pane active" id="random-problems-tab">
+					<% foreach problem in *random_problems %>
+						<% item %>
+							<% include problem_information(problem) %>
+						<% end %>
+						<% empty %>
+							No se encontraron problemas
+						<% end %>
+				</div>
+				<div class="tab-pane" id="latest-problems-tab">
+					<% foreach problem in *latest_problems %>
+						<% item %>
+							<% include problem_information(problem) %>
+						<% end %>
+						<% empty %>
+							No se encontraron problemas
+						<% end %>
+				</div>
+				<div class="tab-pane" id="unsolved-problems-tab">
+					<% foreach problem in *unsolved_problems %>
+						<% item %>
+							<% include problem_information(problem) %>
+						<% end %>
+						<% empty %>
+							No se encontraron problemas sin resolver
+						<% end %>
+				</div>
+			</div>
+		<% end template %>
+		
+		
+		<% template new_problem_button() %>
+			<button class="btn" id="new-problem-button"><i class="icon-plus"></i> Nuevo problema</button>
+			<script>
+				$('#new-problem-button').click(function() {
+					window.location.href = Server.Url.fetch_new_problem_page;
+				});
+			</script>
+		<% end template %>
+		
+		
+		<% template problems_toolbar() %>
+			<% include new_problem_button() %>
+		<% end template %>
+		
+		
+		<% template main_content() %>
+			<div class="main-container narrow header-bar-padding">
+				<% if signed_in %>
+					<% include problems_toolbar() %>	
+					<hr />
+				<% end %>
+				<% include problems_information() %>
+			</div>
+		<% end template %>
+		
+		
 		<% template page_title() %>
+			Problemas - PCI
 		<% end template %>
 		
 		
@@ -18,49 +133,7 @@
 		<% template body_content() %>
 			<% include header_bar() using template_view %>
 			<% include navigation_menu() using template_view %>
-			<div class="narrow header-bar-padding" id="main-container">
-				<% if signed_in %>
-					<div id="problems-toolbar-container">
-						<a class="btn btn-large" href="<% url "/new_problem" %>" id="new-problem-button">
-							Nuevo problema
-						</a>
-					</div>
-				<% end %>
-				<ul class="nav nav-tabs">
-					<li class="active"><a href="#random-problems-tab" data-toggle="tab">Al azar</a></li>
-					<li><a href="#latest-problems-tab" data-toggle="tab">Recientes</a></li>
-					<li><a href="#unsolved-problems-tab" data-toggle="tab">Sin resolver</a></li>
-				</ul>
-				<div class="tab-content">
-					<div class="tab-pane active" id="random-problems-tab">
-						<% foreach problem in *random_problems %>
-							<% item %>
-								<% include problem_description_box(problem) using template_view %>
-							<% end %>
-						<% empty %>
-							No se encontraron problemas
-						<% end %>
-					</div>
-					<div class="tab-pane" id="latest-problems-tab">
-						<% foreach problem in *latest_problems %>
-							<% item %>
-								<% include problem_description_box(problem) using template_view %>
-							<% end %>
-						<% empty %>
-							No se encontraron problemas
-						<% end %>
-					</div>
-					<div class="tab-pane" id="unsolved-problems-tab">
-						<% foreach problem in *unsolved_problems %>
-							<% item %>
-								<% include problem_description_box(problem) using template_view %>
-							<% end %>
-						<% empty %>
-							No se encontraron problemas sin resolver
-						<% end %>
-					</div>
-				</div>
-			</div>
+			<% include main_content() %>
 		<% end template %>
 		
 		
